--- a/bond-moodle.css
+++ b/bond-moodle.css
@@ -153,3 +153,8 @@ a {color: #194C6C;}
     position: absolute !important;
     top: 50px !important;
 }
+
+
+.block_tree: nth-child(2) {
+background-color: red !important;
+}
