--- a/bond-moodle.css
+++ b/bond-moodle.css
@@ -153,9 +153,8 @@ a {color: #194C6C;}
     position: absolute !important;
     top: 50px !important;
 }
-
 .block_tree li:nth-child(2) {
-    display: none !important;
+    background-color: red !important;
 }
 
 
