--- a/bond-moodle.css
+++ b/bond-moodle.css
@@ -154,9 +154,7 @@ a {color: #194C6C;}
     top: 50px !important;
 }
 
-li:nth-child(2) {
-    background-color: red !important;
+.block_tree.list li.type_system:nth-child(2) {
+    background-color: yellow !important;
 }
-
-
 
