--- a/bond-moodle.css
+++ b/bond-moodle.css
@@ -18,7 +18,7 @@
 }
 
 .navbar-inverse .navbar-inner {
-    background-color: red;
+    background-color: #194C6C;
     background-image: none;
     border-color: #194C6C;
 }
