--- a/bond-moodle.css
+++ b/bond-moodle.css
@@ -154,7 +154,9 @@ a {color: #194C6C;}
     top: 50px !important;
 }
 
+/*
 .block_tree.list li.type_system:nth-child(2) {
     background-color: yellow !important;
 }
+*/
 
