move login to top left

--- a/bond-moodle.css
+++ b/bond-moodle.css
@@ -162,3 +162,7 @@ a {color: #194C6C;}
 /* hide moodle logo */
 .sitelink {display: none;}
 
+/* move login to top left */
+.logininfo {position: absolute; top: 60px;}
+
+
